--- a/index.html
+++ b/index.html
@@ -5,34 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Assingment 1</title>
+    <title>Assignment 1</title>
 </head>
 <body>
     <div class="container">
        <h1>Our Menu</h1>
         <div class="row">
-            <div class="col-lg-3 col-md-6 col-sm-12">
+            <div class="col-lg-4 col-md-6">
                 <div class="chicken">
                     <h4>Chicken</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus id, error qui itaque animi tempora dolores, eum dolore nesciunt ducimus fugiat eaque aliquid distinctio repudiandae fuga cupiditate impedit, a magnam.</p>
                 </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-12">
+            <div class="col-lg-4 col-md-6">
                 <div class="beef">
                     <h4>Beef</h4>
-                   <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus id, error qui itaque animi tempora dolores, eum dolore nesciunt ducimus fugiat eaque aliquid distinctio repudiandae fuga cupiditate impedit, a magnam. </p>
+                   <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus id, error qui itaque animi tempora dolores, eum dolore nesciunt ducimus fugiat eaque aliquid distinctio repudiandae fuga cupiditate impedit, a magnam.</p>
                 </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-12">
+            <div class="col-lg-4 col-md-6">
                 <div class="sushi">
                     <h4>Sushi</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus id, error qui itaque animi tempora dolores, eum dolore nesciunt ducimus fugiat eaque aliquid distinctio repudiandae fuga cupiditate impedit, a magnam.</p>   
                 </div>
                 </div> 
-                </div>
-    </div>
-    
-
-    
+        </div>
+    </div>  
 </body>
 </html>
