--- a/Week3Assignment/index.html
+++ b/Week3Assignment/index.html
@@ -80,7 +80,7 @@
     </div>
 <div id="main-content" class="container">
     <div class="jumbotron">
-        <!-- <img src="img/jumbotron_768.jpg" alt="Picture Of Restaurant" class="img-reponsive visible-xs"> -->
+         <img src="img/jumbotron_768.jpg" alt="Picture Of Restaurant" class="img-reponsive visible-xs"> 
     </div>
     <div id="home-tiles" class="row">
         <div class="col-md-4 col-sm-6 col-xs-12">
